envoy-datawire.io/envoy-edge/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: envoy-edge
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: envoy-edge
        # service: edge-envoy-admin
    spec:
      containers:
        - name: envoy-edge
          image: ritzz32/dw-envoy-edge:latest
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 8001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
