envoy-datawire.io/envoy-edge/envoy-edge.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 8001

static_resources:
  listeners:
    - name: usersrv_listener
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              route_config:
                name: usersrv_route
                virtual_hosts:
                  - name: usersrv_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/user"
                        route:
                          cluster: usersrv
              http_filters:
                - name: envoy.router
  clusters:
    - name: usersrv
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: usersvc
            port_value: 80
